data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1082.wast
;; 3. **Test Description**:    - Construct a `loop` where a `br_if` conditionally skips a `br_table`. The `br_table` must then index out of bounds. The test verifies if the loop reinitializes correctly and if `br_table` handles the default target correctly after being skipped by `br_if`.    - **Constraint Checked**: Interaction of `br_if` and `br_table` within a loop and handling of out-of-bounds index.

(assert_invalid
  (module
    (func $br_if_skip_br_table (result i32)
      (i32.const 1)
      (block $exit
        (loop $repeat (result i32)
          (i32.const 0)
          (br_if 1 (i32.const 0))
          (br_table $exit (i32.const 2))
        )
      )
    )
  )
  "invalid branch"
)